[gd_scene load_steps=13 format=3 uid="uid://dg56vg8jbsg1a"]

[ext_resource type="Theme" uid="uid://cuubp4a7q28lw" path="res://theme/kenneyUI-green.tres" id="1_nxo7y"]
[ext_resource type="Script" uid="uid://q8ialhsivonw" path="res://scripts/shot_ui.gd" id="1_shot_ui"]
[ext_resource type="FontFile" uid="uid://cn2g0aaqs3d6n" path="res://models/fonts/Fraunces-VariableFont_SOFT,WONK,opsz,wght.ttf" id="2_ueb5v"]

[sub_resource type="LabelSettings" id="LabelSettings_nxo7y"]
font_size = 100
outline_size = 20
outline_color = Color(0, 0.14509805, 0, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 0.19607843)
shadow_offset = Vector2(0, 10)

[sub_resource type="LabelSettings" id="LabelSettings_n5q2d"]
font_size = 100
outline_size = 20
outline_color = Color(0, 0.14509805, 0, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 0.19607843)
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nxo7y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nxo7y"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n5q2d"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pbkhi"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bc86g"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.02745098, 0.21568628, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mc4k5"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_hp8u3"]
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/align_to_largest_stylebox = 0
Button/constants/h_separation = 4
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("2_ueb5v")
Button/styles/disabled = SubResource("StyleBoxFlat_nxo7y")
Button/styles/focus = SubResource("StyleBoxFlat_n5q2d")
Button/styles/hover = SubResource("StyleBoxFlat_pbkhi")
Button/styles/normal = SubResource("StyleBoxFlat_bc86g")
Button/styles/pressed = SubResource("StyleBoxFlat_mc4k5")

[node name="ShotUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nxo7y")
script = ExtResource("1_shot_ui")

[node name="ScoreInfo" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -9.0
offset_top = 33.0
offset_right = 373.0
offset_bottom = 158.0
grow_horizontal = 2
theme_override_constants/separation = 15

[node name="ScoreLabel" type="Label" parent="ScoreInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 79
text = "Score"
label_settings = SubResource("LabelSettings_nxo7y")

[node name="ScoreValue" type="Label" parent="ScoreInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "0"
label_settings = SubResource("LabelSettings_n5q2d")

[node name="TopBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 60.0
offset_right = 748.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_nxo7y")

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 30

[node name="HoleInfo2" type="HBoxContainer" parent="TopBar/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HoleLabel" type="Label" parent="TopBar/HBoxContainer/HoleInfo2"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Hole 1"

[node name="ParLabel" type="Label" parent="TopBar/HBoxContainer/HoleInfo2"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Par 4"

[node name="YardageLabel" type="Label" parent="TopBar/HBoxContainer/HoleInfo2"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "380 yds"

[node name="Spacer" type="Control" parent="TopBar/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ShotInfo" type="HBoxContainer" parent="TopBar/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ShotLabel" type="Label" parent="TopBar/HBoxContainer/ShotInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Shot 1"

[node name="DistanceLabel" type="Label" parent="TopBar/HBoxContainer/ShotInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0 yds"

[node name="ActionPanel" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 1613.0
offset_top = 782.0
offset_right = 1920.0
offset_bottom = 902.0
size_flags_horizontal = 3

[node name="ConfirmButton" type="Button" parent="ActionPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_hp8u3")
theme_override_font_sizes/font_size = 20
disabled = true
text = "Confirm Shot"

[node name="Hint" type="Label" parent="ActionPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "Left-click to aim, Right-click to shoot"

[node name="BottomPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 20

[node name="ClubPanel" type="VBoxContainer" parent="BottomPanel/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="ClubLabel" type="Label" parent="BottomPanel/HBoxContainer/ClubPanel"]
layout_mode = 2
text = "Club"

[node name="ClubName" type="Label" parent="BottomPanel/HBoxContainer/ClubPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Driver"

[node name="ClubRange" type="Label" parent="BottomPanel/HBoxContainer/ClubPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "200-250 yds"

[node name="TerrainPanel" type="VBoxContainer" parent="BottomPanel/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="TerrainLabel" type="Label" parent="BottomPanel/HBoxContainer/TerrainPanel"]
layout_mode = 2
text = "Terrain"

[node name="CurrentTerrain" type="Label" parent="BottomPanel/HBoxContainer/TerrainPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Tee Box"

[node name="TerrainEffect" type="Label" parent="BottomPanel/HBoxContainer/TerrainPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.5, 1)
text = "No penalty"

[node name="TargetPanel" type="VBoxContainer" parent="BottomPanel/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="TargetLabel" type="Label" parent="BottomPanel/HBoxContainer/TargetPanel"]
layout_mode = 2
text = "Target"

[node name="TargetTerrain" type="Label" parent="BottomPanel/HBoxContainer/TargetPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Fairway"

[node name="TargetDistance" type="Label" parent="BottomPanel/HBoxContainer/TargetPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "180 yds"

[node name="Spacer" type="Control" parent="BottomPanel/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="ScorePopup" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScorePopup"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ScoreTitle" type="Label" parent="ScorePopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Shot Complete!"
horizontal_alignment = 1

[node name="ScoreValue" type="Label" parent="ScorePopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "+250"
horizontal_alignment = 1

[node name="ScoreDetails" type="Label" parent="ScorePopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "50 chips Ã— 5.0 mult"
horizontal_alignment = 1

[node name="HoleCompletePopup" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HoleCompletePopup"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="HoleCompleteTitle" type="Label" parent="HoleCompletePopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Hole Complete!"
horizontal_alignment = 1

[node name="HoleScore" type="Label" parent="HoleCompletePopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Birdie! (-1)"
horizontal_alignment = 1

[node name="TotalScore" type="Label" parent="HoleCompletePopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Total: 1,250 pts"
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="HoleCompletePopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Next Hole"
